# TrainRTX5070_200MTokens

./: .gitignore  CLAUDE.md  README.md  _C_mxfp8.pyd  ideas.tsv  plot_results.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
